Affirming recent changes into commit

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- build:html Ashley-Profesional-Site/index-min.html/ -->
 <!doctype html>
 <html class="no-js" lang="en">
 
@@ -389,7 +388,7 @@
                 <p>Primary Location</p>
 
 
-                <a class="btn" href="https://www.styleseat.com/PrestonHair-Marin">Book in St. Helena
+                <a class="btn" href="mailto:PrestonHairDesign@gmail.com">Book in St. Helena
                 </a>
 
             </div>
@@ -446,4 +445,3 @@
 </body>
 
 </html>
-<!-- endbuild -->
