Most recent updates

--- a/index.html
+++ b/index.html
@@ -60,10 +60,21 @@
 
     <div>
         <div id="topnav">
-            <a href="index.html#Services">Services</a>
-            <a href="index.html#testimonials">Testimonials</a>
-            <a href="index.html#portfolio">Work</a>
-            <a class="mdc-button" href="index.html#book-ashley">Book an Appointment</a>
+            <ul class="nav">
+                <li><a href="index.html#Services">Services</a></li>
+                <li><a href="index.html#testimonials">Testimonials</a></li>
+                <li><a href="index.html#portfolio">Work</a></li>
+                <li><a class="mdc-button" href="index.html#book-ashley">Book an Appointment</a></li>
+            </ul>
+
+            <!-- <ul class="navigation" id="nav">
+  <li><a href="index.html">Home</a></li>
+  <li><a href="about.html">About</a></li>
+  <li><a href="blog.html">Blog</a></li>
+  <li><a href="#nav" class="floater">Top</a></li>
+</ul> -->
+
+
         </div>
     </div>
     <!-- Mobile Menu  -->
