Corrected booking Nav link

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <li><a href="index.html#Services">Services</a></li>
                 <li><a href="index.html#testimonials">Testimonials</a></li>
                 <li><a href="index.html#portfolio">Work</a></li>
-                <li><a class="mdc-button" href="index.html#book-ashley">Book an Appointment</a></li>
+                <li><a class="mdc-button" href="index.html#book">Book an Appointment</a></li>
             </ul>
 
             <!-- <ul class="navigation" id="nav">
@@ -89,7 +89,7 @@
             <a href="index.html#Services" onclick="closeNav()">Services</a>
             <a href="index.html#testimonials" onclick="closeNav()">Testimonials</a>
             <a href="index.html#portfolio" onclick="closeNav()">Work</a>
-            <a class="scheduler-btn" onclick="closeNav()" href="index.html#book-ashley">Book an Appointment</a>
+            <a class="scheduler-btn" onclick="closeNav()" href="index.html#work">Book an Appointment</a>
         </div>
 
     </div>
@@ -392,7 +392,7 @@
 
     <section>
 
-        <div class="locations-container">
+        <div class="locations-container" id="book">
             <div>
                 <h2 class="location-headers">Michele Scott Salon</h2>
                 <h3>Saint Helena</h3>
