New hero image and resized topnav.

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
     <section>
 
         <div class="locations-container" id="book">
-            <div>
+            <div class="locations-item">
                 <h2 class="location-headers">Michele Scott Salon</h2>
                 <h3>Saint Helena</h3>
                 <p>Primary Location</p>
