--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="icon.png">
     <!-- Place favicon.ico in the root directory -->
     <link rel="icon" href="img/favicon.ico" sizes="any" type="image/svg+xml">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Kaushan+Script">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <style>
     
@@ -1607,7 +1607,7 @@ form {
                 <div id="cut-card">
 
                     <div id="cut-content">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128" class="cut-card-icon">
+                        <svg xmlns="https://www.w3.org/2000/svg" viewBox="0 0 128 128" class="cut-card-icon">
                             <g>
                                 <path fill="#FFEC3E"
                                     d="M126.6 94.9c-.6-1-1.9-1.3-3-.9-8.1 3.5-14.4 1.4-16.2.7-.2-3.8-2.1-7.4-5.5-9.7-5.2-3.5-12-2.8-16.3 1.5L1.6 29c-.2-.1-.4-.1-.5.1-.4.6-.3 1.5.3 2L55 77.4c.8.7 1.9 1.1 3 1.1l9.6.1 15.5 11.1c-2.9 5.6-1.2 12.5 4.3 16.1 4.8 3.2 11.2 2.7 15.6-1 1.8-1.5 2.9-3.4 3.6-5.3 3.3 1.1 10.3 2.6 18.8-1.2.1 0 .1-.1.2-.1 1.3-.7 1.8-2.2 1-3.3zM60.5 75.5c-.5.6-1.2.9-2 .9-.6 0-1.2-.2-1.6-.6l-1.8-1.5c-1.1-.9-1.2-2.5-.3-3.6.9-1.1 2.5-1.2 3.6-.3l1.8 1.5c1 .9 1.2 2.5.3 3.6zm40 23.7c-2.2 3.2-6.6 3.9-9.8 1.8-3.2-2.2-4-6.5-1.8-9.7 2.2-3.2 6.6-3.9 9.8-1.8 3.2 2.2 4 6.6 1.8 9.7zm-39.4 2.6l-1.4-18.3h-1.6c-.7 0-1.4-.1-2.1-.2l1 18.9c-5.9 1.4-10.1 6.8-9.8 12.9.4 7 6.4 12.3 13.4 11.9 7-.4 12.4-6.3 12.1-13.3-.2-6.3-5.3-11.3-11.6-11.9zm-.7 19.7c-4 .2-7.3-2.8-7.5-6.7-.2-3.9 2.8-7.2 6.8-7.5 4-.2 7.3 2.8 7.5 6.7.2 3.9-2.8 7.3-6.8 7.5z" />
@@ -1634,7 +1634,7 @@ form {
                 <div id="treatments-card">
                     <div id="treatments-content">
                         <!-- <img src="img/treatment.svg" alt="Cut Icon" /> -->
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+                        <svg xmlns="https://www.w3.org/2000/svg" viewBox="0 0 100 100">
                             <path fill="#FFEC3E"
                                 d="M50 89c-11.1 0-16.4-9-17.5-17.5-.3-2.3-2.3-3.9-4.6-3.9H9.7v-5h18.1c4.8 0 8.9 3.6 9.6 8.3.5 3 2.7 13.1 12.6 13.1 8.3 0 11.3-7.3 12.3-13.5.8-4.6 4.8-7.9 9.5-7.9h18.4v5H71.9c-2.3 0-4.2 1.6-4.6 3.8C65.3 82.8 59.2 89 50 89z" />
                             <path fill="#FFEC3E" id="treatmentStroke"
@@ -1659,7 +1659,7 @@ form {
                 <!-- EXTENSIONS CARD -->
                 <div id="extensions-card">
                     <div id="extensions-content">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+                        <svg xmlns="https://www.w3.org/2000/svg" viewBox="0 0 100 100">
                             <path fill="#FFEC3E"
                                 d="M45.374 87.676h-.004l.002-3.556h.002c2.065 0 3.265-2.639 3.908-4.854 2.451-8.441.29-19.232-1.146-20.982a2.96 2.96 0 0 0-.151.168c-4.545 5.468-10.441 8.887-14.667 8.516-1.824-.162-3.28-1.047-4.101-2.491-1.032-1.819-1.564-4.456-2.078-7.004-.361-1.796-1.208-5.998-2.067-6.233-1.556-.426-3.231-1.849-4.173-3.539-.687-1.237-.881-2.458-.561-3.535.359-1.208 1.54-3.37 3.303-6.529.786-1.412 1.53-2.745 1.99-3.671 1.103-2.216.861-5.434.366-6.376-1.213-2.309-1.495-12.498.803-15.153l2.689 2.329-1.343-1.166 1.345 1.164c-1.033 1.269-1.116 9.583-.342 11.175 1.08 2.057 1.209 6.512-.333 9.612-.498 1-1.26 2.37-2.068 3.817-1.149 2.063-2.725 4.888-2.998 5.81-.123.548 1.194 2.336 2.261 2.629 2.976.814 3.774 4.771 4.617 8.963.458 2.275.93 4.626 1.683 5.951.15.265.451.624 1.32.703 2.53.233 7.458-2.24 11.616-7.245 1.804-2.169 3.6-1.604 4.287-1.26 4.451 2.218 5.302 16.407 3.477 24.145-1.678 7.117-5.079 8.612-7.637 8.612m33.092-34.18l-2.372-.079.034-.954-.881-.363.904-2.193 2.411.994-.035.829c0 .002-.027.682-.061 1.766m-5.686-2.414l-3.7-1.525.904-2.192 3.7 1.525-.904 2.192zm-6.166-2.542l-1.258-.519-2.351-.425.421-2.333 2.717.518 1.375.567-.904 2.192zm-6.234-1.417l-3.938-.711.421-2.333 3.938.71-.421 2.334z" />
                             <path d="M51.216 46.311l-.227-3.293 3.249.586-.421 2.335-.253-.046.018.256z" />
@@ -1894,8 +1894,6 @@ form {
             </div>
 
 
-        </div>
-        <p class="disclaimer">* Weekends available upon request.</p>
 
 
 
@@ -1907,7 +1905,7 @@ form {
 
             <div class="social-footer">
 
-                <a href="http://instagram.com/Preston_Hair_Design">
+                <a href="https://instagram.com/Preston_Hair_Design">
                     <img id="insta-icon" src="img/insta-icon.svg" alt="Instagram icon link">
                 </a>
             </div>
