correcting mobile button booking link

--- a/index.html
+++ b/index.html
@@ -1577,7 +1577,7 @@ form {
             <a href="index.html#Services" onclick="closeNav()">Services</a>
             <a href="index.html#testimonials" onclick="closeNav()">Testimonials</a>
             <a href="index.html#portfolio" onclick="closeNav()">Work</a>
-            <a class="scheduler-btn" onclick="closeNav()" href="index.html#work">Book an Appointment</a>
+            <a class="scheduler-btn" onclick="closeNav()" type="button" href="https://www.Styleseat.com/PrestonHair-StHelena">Book an Appointment</a>
         </div>
 
     </div>
