--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Ashley Preston Hair Design - Master Hair Stylist and Hair Extension Specialist @ Saint Helena, @ San Anselmo</title>
-    <meta name="Ashley Preston Hair Design - Saint Helena, S.F. & Marin County " content="">
+    <meta name="Description" content="Ashley Preston is a Master Hair Stylist and Hair Extension Specialist based out of Saint Helena, Ca and with limited availability @ San Anselmo, Ca. Consultations are free and bringing pictures would be a great help. ">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="manifest" href="site.webmanifest">
