Added google tag manager

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         <div class="footer-content">
             <h2 class="footer-headline">Follow Ashley on Instagram</h2>
             <div class="social-footer">
-                <a href="https://instagram.com/Preston_Hair_Design">
+                <a class="gt-btn" href="https://instagram.com/Preston_Hair_Design">
                     <img id="insta-icon" src="img/insta-icon.svg" alt="Instagram icon link">
                 </a>
             </div>
