--- a/index.html
+++ b/index.html
@@ -147,9 +147,10 @@
             height: (calc 100% - 5px) !important;
         }
 
+        /* linear-gradient(to right, var(--main-color), #c960f5) */
         #header-h1-APHD {
             height: 98vh;
-            background-image: linear-gradient(to bottom, rgba(118, 61, 198, .5) 0, rgba(201, 96, 245, .5) 100%), url(img/ash-pic.jpg);
+            background-image: linear-gradient(to right, var(--main-color), #c960f5), url(img/ash-pic.jpg);
             background-size: auto;
             background-blend-mode: soft-light;
             background-repeat: no-repeat;
@@ -1068,7 +1069,8 @@
                 <li><a class="mdc-button" href="index.html#Services">Services</a></li>
                 <li><a class="mdc-button" href="index.html#testimonials">Testimonials</a></li>
                 <li><a class="mdc-button" href="index.html#portfolio">Work</a></li>
-                <li><a class="mdc-button" href="index.html#book">Book an Appointment</a></li>
+                <li><a class="mdc-button" href="https://www.Styleseat.com/PrestonHair-StHelena">Book an Appointment</a>
+                </li>
             </ul>
         </div>
     </div>
