--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
             --main-color: #FEC89A;
             --secondary-bg-color: #FEC89A;
             --comp-color: #FEC5BB;
+            --greenish: 216, 226, 220;
+            --header: #763dc6;
             --transparency-main: rgba(232, 232, 228, 0.75);
             --transparency-secondary: rgba(254, 200, 154, 0.75);
             --headline-font: 'Kaushan Script', "San Serif";
@@ -77,7 +79,7 @@
         #nav a {
             font-family: var(--headline-font);
             letter-spacing: .2rem;
-            color: #000;
+            color: var(--header);
             padding: 0 50px;
             text-rendering: optimizeLegibility;
             height: auto;
@@ -126,13 +128,13 @@
             min-width: 25%;
             height: 100%;
             -webkit-filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, .7));
-            filter: drop-shadow(2px 2px 0 #763dc6);
+            filter: drop-shadow(2px 2px 0 var(--header));
         }
 
         #header-h1-APHD h1 {
             font-size: 2rem;
             font-family: 'Kaushan Script', cursive;
-            /* color: var(--main-color); */
+            color: var(--header);
             display: flex;
             align-items: flex-end;
             letter-spacing: 3px;
@@ -195,7 +197,7 @@
             color: var(--comp-color);
             background-position: top;
             -webkit-box-shadow: 0 14px 28px rgba(118, 61, 198, .25), 0 10px 10px rgba(118, 61, 198, .75);
-            box-shadow: 0 14px 28px rgba(118, 61, 198, .25), 0 10px 10px rgba(118, 61, 198, .75)
+            box-shadow: 0 14px 28px var(--transparency-main), 0 10px 10px var(--transparency-secondary)
         }
 
         .splash-headline {
@@ -240,7 +242,7 @@
 
         .location-headers {
             font-family: "Kaushan Script";
-            color: var(--comp-color);
+            color: var(--header);
             margin: auto;
             margin-left: 15px;
             font-size: 2rem;
@@ -249,7 +251,7 @@
         }
 
         .services {
-            background-color: #eee;
+            background-color: var(--greenish);
             position: relative;
             font-family: "Open Sans";
             color: #000
@@ -270,7 +272,7 @@
             margin: auto;
             font-family: var(--headline-font);
             font-size: 2em;
-            color: var(--main-color);
+            color: var(--header);
             font-family: 'Kaushan Script';
             letter-spacing: .4rem
         }
@@ -286,7 +288,7 @@
             font-size: 2em;
             color: var(--main-color);
             font-family: 'Kaushan Script';
-            letter-spacing: .4rem
+            letter-spacing: 3px
         }
 
         .services-intro {
@@ -351,9 +353,9 @@
         #treatments-card h3 {
             font-family: "Kaushan Script";
             display: inline-block;
-            text-decoration: underline;
+            letter-spacing: 3px;
             font-size: 2rem;
-            color: var(--main-color);
+            color: var(--header);
             text-align: center;
             width: 100%;
 
@@ -569,7 +571,7 @@
                 letter-spacing: .4rem;
                 -ms-flex-line-pack: center;
                 align-content: center;
-                background: linear-gradient(195deg, #f02fc2, #6094ea, #c960f5, #763dc6);
+                background: linear-gradient(195deg, #f02fc2, #6094ea, #c960f5, var(--header));
                 background-size: 800% 800%;
                 -webkit-animation: ash-hero-gradient-shift 30s ease infinite;
                 -moz-animation: ash-hero-gradient-shift 30s ease infinite;
@@ -760,10 +762,10 @@
             }
 
             .marin {
-                background: -webkit-gradient(linear, right top, left top, from(#763dc6), to(#c960f5));
-                background: -webkit-linear-gradient(right, #763dc6, #c960f5);
-                background: -o-linear-gradient(right, #763dc6, #c960f5);
-                background: linear-gradient(to left, #763dc6, #c960f5)
+                background: -webkit-gradient(linear, right top, left top, from(var(--header)), to(#c960f5));
+                background: -webkit-linear-gradient(right, var(--header), #c960f5);
+                background: -o-linear-gradient(right, var(--header), #c960f5);
+                background: linear-gradient(to left, var(--header), #c960f5)
             }
 
             .booking-container {
@@ -1136,9 +1138,9 @@
                     <divf id="cut-content">
                         <!-- <svg xmlns="https://www.w3.org/2000/svg" viewBox="0 0 128 128" class="cut-card-icon">
                             <g>
-                                <path fill="#763DC6"
+                                <path fill="var(--header)"
                                     d="M126.6 94.9c-.6-1-1.9-1.3-3-.9-8.1 3.5-14.4 1.4-16.2.7-.2-3.8-2.1-7.4-5.5-9.7-5.2-3.5-12-2.8-16.3 1.5L1.6 29c-.2-.1-.4-.1-.5.1-.4.6-.3 1.5.3 2L55 77.4c.8.7 1.9 1.1 3 1.1l9.6.1 15.5 11.1c-2.9 5.6-1.2 12.5 4.3 16.1 4.8 3.2 11.2 2.7 15.6-1 1.8-1.5 2.9-3.4 3.6-5.3 3.3 1.1 10.3 2.6 18.8-1.2.1 0 .1-.1.2-.1 1.3-.7 1.8-2.2 1-3.3zM60.5 75.5c-.5.6-1.2.9-2 .9-.6 0-1.2-.2-1.6-.6l-1.8-1.5c-1.1-.9-1.2-2.5-.3-3.6.9-1.1 2.5-1.2 3.6-.3l1.8 1.5c1 .9 1.2 2.5.3 3.6zm40 23.7c-2.2 3.2-6.6 3.9-9.8 1.8-3.2-2.2-4-6.5-1.8-9.7 2.2-3.2 6.6-3.9 9.8-1.8 3.2 2.2 4 6.6 1.8 9.7zm-39.4 2.6l-1.4-18.3h-1.6c-.7 0-1.4-.1-2.1-.2l1 18.9c-5.9 1.4-10.1 6.8-9.8 12.9.4 7 6.4 12.3 13.4 11.9 7-.4 12.4-6.3 12.1-13.3-.2-6.3-5.3-11.3-11.6-11.9zm-.7 19.7c-4 .2-7.3-2.8-7.5-6.7-.2-3.9 2.8-7.2 6.8-7.5 4-.2 7.3 2.8 7.5 6.7.2 3.9-2.8 7.3-6.8 7.5z" />
-                                <path fill="#763DC6"
+                                <path fill="var(--header)"
                                     d="M64.3 65.5L53.6 2.3C53.5 1.5 52.8 1 52 1c-.2 0-.3.2-.3.3L54.8 59l9.5 6.5z" />
                             </g>
                         </svg> -->
@@ -1166,8 +1168,8 @@
                             d="M50 89c-11.1 0-16.4-9-17.5-17.5-.3-2.3-2.3-3.9-4.6-3.9H9.7v-5h18.1c4.8 0 8.9 3.6 9.6 8.3.5 3 2.7 13.1 12.6 13.1 8.3 0 11.3-7.3 12.3-13.5.8-4.6 4.8-7.9 9.5-7.9h18.4v5H71.9c-2.3 0-4.2 1.6-4.6 3.8C65.3 82.8 59.2 89 50 89z" />
                         <path fill="#FFEC3E" id="treatmentStroke"
                             d="M55 42.4c.1-1.8.3-3.6.4-5.4.2-1.8.4-3.6.6-5.3.2-1.7.5-3.4.7-4.9.2-1.6.6-3 .8-4.4.3-1.3.6-2.6.8-3.7.3-1.1.5-2 .8-2.8.5-1.6.8-2.4.8-2.4s-.5.8-1.2 2.2c-.4.7-.8 1.6-1.3 2.6s-1 2.2-1.6 3.5c-.5 1.3-1.1 2.7-1.7 4.2-.6 1.5-1.1 3.1-1.7 4.8-.6 1.7-1.1 3.4-1.6 5.2l-1.5 5.4c-.4 1.8-.9 3.7-1.3 5.5-.4 1.8-.8 3.6-1.1 5.4-.3 1.8-.6 3.4-.9 5-.3 1.6-.5 3.2-.7 4.6-.1.8-.2 1.6-.3 2.3-2.3 1.6-3.8 4.2-3.8 7.1 0 4.8 3.9 8.6 8.6 8.6 4.8 0 8.6-3.9 8.6-8.6 0-2.8-1.4-5.3-3.5-6.9 0-.7-.1-1.4-.1-2.1-.1-1.3-.2-2.8-.2-4.3 0-1.6-.1-3.2-.1-4.9 0-1.7 0-3.5.1-5.3.2-1.8.4-3.6.4-5.4z" />
-                        <circle fill="#763DC6" class="right-bottom" cx="63" cy="50.9" r="3.6" />
-                        <circle fill="#763DC6" class="right-bottom" cx="62.6" cy="37.2" r="3.2" />
+                        <circle fill="var(--header)" class="right-bottom" cx="63" cy="50.9" r="3.6" />
+                        <circle fill="var(--header)" class="right-bottom" cx="62.6" cy="37.2" r="3.2" />
                         <circle fill="#763DC6" class="right-bottom" cx="63.8" cy="24.6" r="2.5" />
                         <circle fill="#763DC6" class="left-bottom" cx="42.4" cy="41.1" r="3.2" />
                         <circle fill="#763DC6" class="left-bottom" cx="47.3" cy="28.4" r="2.5" />
