--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         ul {
             list-style: none;
             margin: 0;
+            padding-left: 0;
             text-align: left
         }
 
@@ -451,7 +452,12 @@
                 letter-spacing: .4rem
             }
 
+            .locations-container p {
+                color: white;
+            }
+
             .locations-container {
+                color: white;
                 color: #222;
                 height: 50vh;
                 display: -webkit-box;
@@ -540,6 +546,8 @@
                 text-align: center;
                 margin-top: 30px
             }
+
+
 
             .overlay a {
                 padding: 8px;
