--- a/index.html
+++ b/index.html
@@ -441,6 +441,13 @@
                 height: 100%;
             }
 
+            ul {
+                list-style: none;
+                margin: 0;
+                padding-left: 0;
+                text-align: left
+            }
+
             .testimonials-title {
                 display: block;
                 margin-left: 10%;
@@ -657,6 +664,15 @@
         }
 
         @media screen and (min-width:551px) {
+
+
+            ul {
+                list-style: none;
+                margin: 0;
+                padding-left: 0;
+                text-align: left
+            }
+
             .splash-content {
                 display: flex;
                 justify-content: center;
