adjusted border radius on frame

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
     mix-blend-mode: darken;
     height: 20%;
     opacity: 40%;
+    border-radius: 0 0 15px 15px;
     background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
         } 
 
